<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="buttonLogin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="208dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerInParent='true'
        android:onClick="buttonLogin"
        android:text="@string/login_caps"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="504dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/no_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="678dp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerInParent='true'
        android:onClick="buttonRegister"
        android:text="@string/register_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="739dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot"
        android:textColor="@color/accent"
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="470dp" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="402dp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#404040"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="314dp" />

    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginStart="44dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="618dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="290dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/accesspass_logo"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="56dp" />


</androidx.constraintlayout.widget.ConstraintLayout>