<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <TextView
        android:id="@+id/textView_venue_info_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="242dp" />

    <Button
        android:id="@+id/button_venue_info_feedback"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/grey"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/button_venue_info_info"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/icon"
        android:text="@string/info"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/button_venue_info_reviews"
        android:layout_width="117dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/grey"
        android:text="@string/reviews"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="147dp"
        tools:layout_editor_absoluteY="362dp" />

    <TextView
        android:id="@+id/textView_venue_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="174dp" />

    <ImageView
        android:id="@+id/imageView_venue_info_picture"
        android:layout_width="394dp"
        android:layout_height="166dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/toa_heftiba_50ijcehhn8o_unsplash" />

    <ImageButton
        android:id="@+id/imageButton_venue_info_backspace"
        android:layout_width="88dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/primary"
        app:srcCompat="@drawable/left_arrow"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="174dp" />

    <TextView
        android:id="@+id/textView_venue_info_about"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/about_venue_header"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="427dp" />

    <TextView
        android:id="@+id/textView_venue_info_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="473dp" />

    <TextView
        android:id="@+id/textView_venue_info_facilities"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:text="@string/facilities"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="548dp" />

    <ImageView
        android:id="@+id/imageView_venue_info_wheelchair"
        android:layout_width="67dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/wheelchair_icon"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="586dp" />

    <ImageButton
        android:id="@+id/imageButton_venue_info_favourites"
        android:layout_width="87dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/primary"
        app:srcCompat="@drawable/star_favorite"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="172dp" />

    <ImageView
        android:id="@+id/imageView_venue_info_stairs"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/stairs_icon"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="586dp" />

    <ImageView
        android:id="@+id/imageView_venue_info_food"
        android:layout_width="64dp"
        android:layout_height="62dp"
        app:srcCompat="@drawable/food_icon"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="586dp" />

    <RatingBar
        android:id="@+id/ratingBar_venue_info_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="303dp" />


</androidx.constraintlayout.widget.ConstraintLayout>